--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,108 +7,105 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-     <nav>
-         <ul>
-             <li>
-            <a href=""></a>
-            <img src="./images/logo_webstudio.png" alt="Logo-company">
-             </li>
-            <li>
-            <a href="">Студия</a>
-            </li>
-            <li>
-            <a href="">Портфолио</a>
-            </li>
-            <li>
-            <a href="">Контакты</a>
-            </li>
-         </ul>
-     </nav>  
-        <ul>
-            <li>              
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </header>
-    <main>
-<section>
-<!--Section HERO-->
-    <p>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-    </p>
-    <button>Заказать услугу</button>
-</section>
-<section>
-<!--Section Description-->
-<h2>Our features</h2>
-<ul>
-    <li>
-        <h3>Внимание к деталям</h3>
-        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-    </li>
-    <li>
-        <h3>Пунктуальность</h3>
-        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-    </li>
-    <li>
-        <h3>Планирование</h3>
-        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-    </li>
-    <li>
-        <h3>Современные технологии</h3>
-        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-    </li>
-</ul>
-</section>
-<section>
-<!--Section What we do-->
-<h3>Чем мы занимаемся</h3>
-<ul>
-    <li>
-        <img src="./images/box1.jpg" alt="web development">
-    </li>
-    <li>
-        <img src="./images/box2.jpg" alt="mobile development">
-    </li>
-    <li>
-        <img src="./images/box3.jpg" alt="responsive design">
-    </li>
-</ul>
-</section>
-<section>
-<!--Section Our Team-->
-<h3>Наша команда</h3>
-<ul>
-    <li>
-        <img src="./images/igor_photo.jpg" width=270 alt="photo of product design">
-        <p>Игорь Демьяненко<br>Product Designer</p>
-    </li>
-    <li>
-        <img src="./images/./olga_photo.jpg" width=270 alt="photo of frontend developer">
-        <p>Ольга Репина<br>Frontend Developer</p>
-    </li>
-    <li>
-        <img src="./images/./mykola_photo.jpg" width=270 alt="photo of marketing">
-        <p>Николай Тарасов<br>Marketing</p>
-    </li>
-    <li>
-        <img src="./images/./mychail_photo.jpg" width=270 alt="photo of UI design">
-        <p>Михаил Ермаков<br>UI Designer</p>
-    </li>
-</ul>
-</section>
-    </main>
-    <footer>
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <img src="./images/logo_webstudio.png" alt="Logo-company">
+        </li>
+        <li>
+          <a href="">Студия</a>
+        </li>
+        <li>
+          <a href="">Портфолио</a>
+        </li>
+        <li>
+          <a href="">Контакты</a>
+        </li>
+      </ul>
+    </nav>  
+    <ul>
+      <li>              
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </li>
+      <li>
+        <p>+38 096 111 11 11</p>
+      </li>
+    </ul>
+  </header>
+  <main>
+    <!--Section HERO-->
+    <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+        <button>Заказать услугу</button>
+    </section>
+    <!--Section Description-->
+    <section>
+    <h2>Our features</h2>
+    <ul>
+        <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        </li>
+        <li>
+            <h3>Пунктуальность</h3>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </li>
+        <li>
+            <h3>Планирование</h3>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </li>
+        <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        </li>
+    </ul>
+    </section>
+    <!--Section What we do-->
+    <section>
+    <h3>Чем мы занимаемся</h3>
+    <ul>
+        <li>
+            <img src="./images/box1.jpg" alt="web development">
+        </li>
+        <li>
+            <img src="./images/box2.jpg" alt="mobile development">
+        </li>
+        <li>
+            <img src="./images/box3.jpg" alt="responsive design">
+        </li>
+    </ul>
+    </section>
+    <!--Section Our Team-->
+    <section>
+    <h3>Наша команда</h3>
+    <ul>
+        <li>
+            <img src="./images/igor_photo.jpg" width=270 alt="photo of product design">
+            <p>Игорь Демьяненко<br>Product Designer</p>
+        </li>
+        <li>
+            <img src="./images/./olga_photo.jpg" width=270 alt="photo of frontend developer">
+            <p>Ольга Репина<br>Frontend Developer</p>
+        </li>
+        <li>
+            <img src="./images/./mykola_photo.jpg" width=270 alt="photo of marketing">
+            <p>Николай Тарасов<br>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/./mychail_photo.jpg" width=270 alt="photo of UI design">
+            <p>Михаил Ермаков<br>UI Designer</p>
+        </li>
+    </ul>
+    </section>
+  </main>
+  <footer>
         <img src="./images/logo_webstudio.png" alt="Logo-company">
             <address>
-                <p>г. Киев, пр-т Леси Украинки, 26 <br>
-                info@example.com <br>
-                +38 099 111 11 11</p>
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <p>info@example.com</p>
+                <p>+38 099 111 11 11</p>
             </address>
-    </footer>
+  </footer>
 </body>
 </html>
