--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>
-          <img src="./images/logo_webstudio.png" alt="Logo-company">
+          <img src="./images/logo_webstudio.png" alt="логотип компании">
         </li>
         <li>
           <a href="">Студия</a>
@@ -41,7 +41,7 @@
     </section>
     <!--Section Description-->
     <section>
-    <h2>Our features</h2>
+    <h2>Наши приимущества</h2>
     <ul>
         <li>
             <h3>Внимание к деталям</h3>
@@ -66,13 +66,13 @@
     <h3>Чем мы занимаемся</h3>
     <ul>
         <li>
-            <img src="./images/box1.jpg" alt="web development">
+            <img src="./images/box1.jpg" alt="вэб разработка">
         </li>
         <li>
-            <img src="./images/box2.jpg" alt="mobile development">
+            <img src="./images/box2.jpg" alt="мобильная разработка">
         </li>
         <li>
-            <img src="./images/box3.jpg" alt="responsive design">
+            <img src="./images/box3.jpg" alt="адаптивный дизайн">
         </li>
     </ul>
     </section>
@@ -81,26 +81,26 @@
     <h3>Наша команда</h3>
     <ul>
         <li>
-            <img src="./images/igor_photo.jpg" width=270 alt="photo of product design">
+            <img src="./images/igor_photo.jpg" width=270 alt="продук дизайнер">
             <p>Игорь Демьяненко<br>Product Designer</p>
         </li>
         <li>
-            <img src="./images/./olga_photo.jpg" width=270 alt="photo of frontend developer">
+            <img src="./images/./olga_photo.jpg" width=270 alt="фронтэнд разработчик">
             <p>Ольга Репина<br>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/./mykola_photo.jpg" width=270 alt="photo of marketing">
+            <img src="./images/./mykola_photo.jpg" width=270 alt="маркетинг">
             <p>Николай Тарасов<br>Marketing</p>
         </li>
         <li>
-            <img src="./images/./mychail_photo.jpg" width=270 alt="photo of UI design">
+            <img src="./images/./mychail_photo.jpg" width=270 alt="дизайнер">
             <p>Михаил Ермаков<br>UI Designer</p>
         </li>
     </ul>
     </section>
   </main>
   <footer>
-        <img src="./images/logo_webstudio.png" alt="Logo-company">
+        <img src="./images/logo_webstudio.png" alt="логотип компании">
             <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <p>info@example.com</p>
