--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>
-          <img src="./images/logo_webstudio.png" alt="логотип компании">
+         <a href=""><img src="./images/logo_webstudio.png" alt="логотип компании"></a>
         </li>
         <li>
           <a href="">Студия</a>
@@ -37,7 +37,7 @@
     <!--Section HERO-->
     <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+        <button type="button">Заказать услугу</button>
     </section>
     <!--Section Description-->
     <section>
@@ -63,22 +63,22 @@
     </section>
     <!--Section What we do-->
     <section>
-    <h3>Чем мы занимаемся</h3>
+    <h2>Чем мы занимаемся</h2>
     <ul>
         <li>
-            <img src="./images/box1.jpg" alt="вэб разработка">
+            <img src="./images/box1.jpg" width=370 alt="вэб разработка">
         </li>
         <li>
-            <img src="./images/box2.jpg" alt="мобильная разработка">
+            <img src="./images/box2.jpg" width=370 alt="мобильная разработка">
         </li>
         <li>
-            <img src="./images/box3.jpg" alt="адаптивный дизайн">
+            <img src="./images/box3.jpg" width=370 alt="адаптивный дизайн">
         </li>
     </ul>
     </section>
     <!--Section Our Team-->
     <section>
-    <h3>Наша команда</h3>
+    <h2>Наша команда</h2>
     <ul>
         <li>
             <img src="./images/igor_photo.jpg" width=270 alt="продук дизайнер">
@@ -100,12 +100,12 @@
     </section>
   </main>
   <footer>
-        <img src="./images/logo_webstudio.png" alt="логотип компании">
-            <address>
+    <a href=""><img src="./images/logo_webstudio.png" alt="логотип компании"></a>
+      <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <p>info@example.com</p>
                 <p>+38 099 111 11 11</p>
-            </address>
+      </address>v
   </footer>
 </body>
 </html>
