--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>
-         <a href=""><img src="./images/logo_webstudio.png" alt="логотип компании"></a>
+         <a href="">WebStudio</a>
         </li>
         <li>
           <a href="">Студия</a>
@@ -100,12 +100,12 @@
     </section>
   </main>
   <footer>
-    <a href=""><img src="./images/logo_webstudio.png" alt="логотип компании"></a>
+    <a href="">WebStudio</a>
       <address>
                 <p>г. Киев, пр-т Леси Украинки, 26</p>
                 <p>info@example.com</p>
                 <p>+38 099 111 11 11</p>
-      </address>v
+      </address>
   </footer>
 </body>
 </html>
