внес замечания ментора

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
   <header>
     <nav>
+      <a href="">WebStudio</a>
       <ul>
-        <li>
-         <a href="">WebStudio</a>
-        </li>
         <li>
           <a href="">Студия</a>
         </li>
@@ -29,7 +27,7 @@
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       </li>
       <li>
-        <p>+38 096 111 11 11</p>
+        <a href="tel:+380961111111"><p>+38 096 111 11 11</p></a>
       </li>
     </ul>
   </header>
@@ -81,20 +79,24 @@
     <h2>Наша команда</h2>
     <ul>
         <li>
-            <img src="./images/igor_photo.jpg" width=270 alt="продук дизайнер">
-            <p>Игорь Демьяненко<br>Product Designer</p>
+            <img src="./images/igor-photo.jpg" width=270 alt="продук дизайнер">
+            <h3>Игорь Демьяненко</h3>
+            <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/./olga_photo.jpg" width=270 alt="фронтэнд разработчик">
-            <p>Ольга Репина<br>Frontend Developer</p>
+            <img src="./images/./olga-photo.jpg" width=270 alt="фронтэнд разработчик">
+            <h3>Ольга Репина</h3>
+            <p>Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/./mykola_photo.jpg" width=270 alt="маркетинг">
-            <p>Николай Тарасов<br>Marketing</p>
+            <img src="./images/./mykola-photo.jpg" width=270 alt="маркетинг">
+            <h3>Николай Тарасов</h3>
+            <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/./mychail_photo.jpg" width=270 alt="дизайнер">
-            <p>Михаил Ермаков<br>UI Designer</p>
+            <img src="./images/./mychail-photo.jpg" width=270 alt="дизайнер">
+            <h3>Михаил Ермаков</h3>
+            <p>UI Designer</p>
         </li>
     </ul>
     </section>
@@ -102,9 +104,11 @@
   <footer>
     <a href="">WebStudio</a>
       <address>
-                <p>г. Киев, пр-т Леси Украинки, 26</p>
-                <p>info@example.com</p>
-                <p>+38 099 111 11 11</p>
+        <ul>
+          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
   </footer>
 </body>
