--- a/index.html
+++ b/index.html
@@ -63,15 +63,9 @@
     <section>
     <h2>Чем мы занимаемся</h2>
     <ul>
-        <li>
-            <img src="./images/box1.jpg" width=370 alt="вэб разработка">
-        </li>
-        <li>
-            <img src="./images/box2.jpg" width=370 alt="мобильная разработка">
-        </li>
-        <li>
-            <img src="./images/box3.jpg" width=370 alt="адаптивный дизайн">
-        </li>
+        <li><img src="./images/box1.jpg" width=370 alt="вэб разработка"></li>
+        <li><img src="./images/box2.jpg" width=370 alt="мобильная разработка"></li>
+        <li><img src="./images/box3.jpg" width=370 alt="адаптивный дизайн"></li>
     </ul>
     </section>
     <!--Section Our Team-->
